Fix overlaps in header and main container

--- a/index.css
+++ b/index.css
@@ -197,6 +197,12 @@
     }
 }
 
+@media (max-width: 380px) {
+    main {
+        margin-top: calc(3.5rem + 2vh) !important;
+    }
+}
+
 /* Extra small phones (below 320px) */
 @media (max-width: 320px) {
     .nav-menu {
